--- a/parts/appwizard/kscreensaver/kscreensaverui.ui
+++ b/parts/appwizard/kscreensaver/kscreensaverui.ui
@@ -1,15 +1,12 @@
-<!DOCTYPE UI><UI>
+<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
 <class>$APPNAME$UI</class>
 <comment>This is the main UI for setting up your screen saver.</comment>
 <author>Ian Reinhart Geiser</author>
-<widget>
-    <class>QDialog</class>
-    <property stdset="1">
-        <name>name</name>
+<widget class="QDialog">
+    <property name="name">
         <cstring>$APPNAMELC$cfg</cstring>
     </property>
-    <property stdset="1">
-        <name>geometry</name>
+    <property name="geometry">
         <rect>
             <x>0</x>
             <y>0</y>
@@ -17,18 +14,14 @@
             <height>58</height>
         </rect>
     </property>
-    <property stdset="1">
-        <name>caption</name>
+    <property name="caption">
         <string>Screen Saver Config</string>
     </property>
-    <widget>
-        <class>QLayoutWidget</class>
-        <property stdset="1">
-            <name>name</name>
+    <widget class="QLayoutWidget">
+        <property name="name">
             <cstring>Layout2</cstring>
         </property>
-        <property stdset="1">
-            <name>geometry</name>
+        <property name="geometry">
             <rect>
                 <x>5</x>
                 <y>0</y>
@@ -37,60 +30,51 @@
             </rect>
         </property>
         <grid>
-            <property stdset="1">
-                <name>margin</name>
+            <property name="name">
+                <cstring>unnamed</cstring>
+            </property>
+            <property name="margin">
                 <number>0</number>
             </property>
-            <property stdset="1">
-                <name>spacing</name>
+            <property name="spacing">
                 <number>6</number>
             </property>
-            <widget row="0"  column="0" >
-                <class>QCheckBox</class>
-                <property stdset="1">
-                    <name>name</name>
+            <widget class="QCheckBox" row="0" column="0">
+                <property name="name">
                     <cstring>CheckBox1</cstring>
                 </property>
-                <property stdset="1">
-                    <name>text</name>
+                <property name="text">
                     <string>Set some setting...</string>
                 </property>
             </widget>
-            <widget row="1"  column="0" >
-                <class>QLayoutWidget</class>
-                <property stdset="1">
-                    <name>name</name>
+            <widget class="QLayoutWidget" row="1" column="0">
+                <property name="name">
                     <cstring>Layout1</cstring>
                 </property>
                 <hbox>
-                    <property stdset="1">
-                        <name>margin</name>
+                    <property name="name">
+                        <cstring>unnamed</cstring>
+                    </property>
+                    <property name="margin">
                         <number>0</number>
                     </property>
-                    <property stdset="1">
-                        <name>spacing</name>
+                    <property name="spacing">
                         <number>6</number>
                     </property>
-                    <widget>
-                        <class>QPushButton</class>
-                        <property stdset="1">
-                            <name>name</name>
+                    <widget class="QPushButton">
+                        <property name="name">
                             <cstring>OkayPushButton</cstring>
                         </property>
-                        <property stdset="1">
-                            <name>text</name>
-                            <string>Okay</string>
+                        <property name="text">
+                            <string>&amp;Okay</string>
                         </property>
                     </widget>
-                    <widget>
-                        <class>QPushButton</class>
-                        <property stdset="1">
-                            <name>name</name>
+                    <widget class="QPushButton">
+                        <property name="name">
                             <cstring>CancelPushButton</cstring>
                         </property>
-                        <property stdset="1">
-                            <name>text</name>
-                            <string>Cancel</string>
+                        <property name="text">
+                            <string>&amp;Cancel</string>
                         </property>
                     </widget>
                 </hbox>
@@ -98,4 +82,5 @@
         </grid>
     </widget>
 </widget>
+<layoutdefaults spacing="6" margin="11"/>
 </UI>
