--- a/parts/phpsupport/phpconfigparserwidgetbase.ui
+++ b/parts/phpsupport/phpconfigparserwidgetbase.ui
@@ -47,7 +47,7 @@
                         <cstring>codeHinting_checkbox</cstring>
                     </property>
                     <property name="text">
-                        <string>Enable Code &amp;Hinting</string>
+                        <string>Enable code &amp;hinting</string>
                     </property>
                 </widget>
                 <widget class="QCheckBox" row="0" column="0">
@@ -55,7 +55,7 @@
                         <cstring>codeCompletion_checkbox</cstring>
                     </property>
                     <property name="text">
-                        <string>Enable Code &amp;Completion</string>
+                        <string>Enable code &amp;completion</string>
                     </property>
                 </widget>
             </grid>
@@ -82,13 +82,13 @@
                         <cstring>realtimeParsing_checkbox</cstring>
                     </property>
                     <property name="text">
-                        <string>Enable Realtime Parser</string>
+                        <string>Enable realtime parser</string>
                     </property>
                 </widget>
             </grid>
         </widget>
         <spacer row="1" column="0">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer33</cstring>
             </property>
             <property name="orientation">
@@ -97,15 +97,9 @@
             <property name="sizeType">
                 <enum>Expanding</enum>
             </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
-            </property>
         </spacer>
         <spacer row="1" column="1">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer34</cstring>
             </property>
             <property name="orientation">
@@ -114,15 +108,9 @@
             <property name="sizeType">
                 <enum>Expanding</enum>
             </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
-            </property>
         </spacer>
         <spacer row="0" column="2">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer35</cstring>
             </property>
             <property name="orientation">
@@ -130,12 +118,6 @@
             </property>
             <property name="sizeType">
                 <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
     </grid>
