--- a/parts/scriptproject/scriptoptionswidgetbase.ui
+++ b/parts/scriptproject/scriptoptionswidgetbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Script project options</string>
+        <string>Script Project Options</string>
     </property>
     <vbox>
         <property name="name">
@@ -48,7 +48,7 @@
                     <number>6</number>
                 </property>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer4</cstring>
                     </property>
                     <property name="orientation">
@@ -56,12 +56,6 @@
                     </property>
                     <property name="sizeType">
                         <enum>Minimum</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
                 <widget class="QLineEdit">
@@ -72,7 +66,7 @@
             </hbox>
         </widget>
         <spacer>
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer7</cstring>
             </property>
             <property name="orientation">
@@ -80,12 +74,6 @@
             </property>
             <property name="sizeType">
                 <enum>Minimum</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
         <widget class="QLabel">
@@ -111,7 +99,7 @@
                     <number>6</number>
                 </property>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer4_2</cstring>
                     </property>
                     <property name="orientation">
@@ -119,12 +107,6 @@
                     </property>
                     <property name="sizeType">
                         <enum>Minimum</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
                 <widget class="QLineEdit">
@@ -135,7 +117,7 @@
             </hbox>
         </widget>
         <spacer>
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer6</cstring>
             </property>
             <property name="orientation">
@@ -143,12 +125,6 @@
             </property>
             <property name="sizeType">
                 <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
     </vbox>
