--- a/parts/autoproject/addfiledlgbase.ui
+++ b/parts/autoproject/addfiledlgbase.ui
@@ -33,8 +33,78 @@
         </size>
     </property>
     <property name="caption">
-        <string>Add New Created File To Target</string>
+        <string>Add New Created File to Target</string>
     </property>
+    <spacer>
+        <property name="name">
+            <cstring>Spacer2</cstring>
+        </property>
+        <property name="orientation">
+            <enum>Vertical</enum>
+        </property>
+        <property name="sizeType">
+            <enum>Expanding</enum>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>212</x>
+                <y>171</y>
+                <width>20</width>
+                <height>25</height>
+            </rect>
+        </property>
+    </spacer>
+    <widget class="QLayoutWidget">
+        <property name="name">
+            <cstring>buttonLayout</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>11</x>
+                <y>202</y>
+                <width>423</width>
+                <height>31</height>
+            </rect>
+        </property>
+        <hbox>
+            <property name="name">
+                <cstring>unnamed</cstring>
+            </property>
+            <property name="margin">
+                <number>0</number>
+            </property>
+            <property name="spacing">
+                <number>6</number>
+            </property>
+            <spacer>
+                <property name="name">
+                    <cstring>buttonSpacer</cstring>
+                </property>
+                <property name="orientation">
+                    <enum>Horizontal</enum>
+                </property>
+                <property name="sizeType">
+                    <enum>Expanding</enum>
+                </property>
+            </spacer>
+            <widget class="QPushButton">
+                <property name="name">
+                    <cstring>createButton</cstring>
+                </property>
+                <property name="text">
+                    <string>&amp;Create</string>
+                </property>
+            </widget>
+            <widget class="QPushButton">
+                <property name="name">
+                    <cstring>cancelButton</cstring>
+                </property>
+                <property name="text">
+                    <string>C&amp;ancel</string>
+                </property>
+            </widget>
+        </hbox>
+    </widget>
     <widget class="QGroupBox">
         <property name="name">
             <cstring>targetBox</cstring>
@@ -54,7 +124,7 @@
             <enum>Sunken</enum>
         </property>
         <property name="title">
-            <string>Target information</string>
+            <string>Target Information</string>
         </property>
         <hbox>
             <property name="name">
@@ -155,7 +225,7 @@
             </rect>
         </property>
         <property name="title">
-            <string>File information</string>
+            <string>File Information</string>
         </property>
         <vbox>
             <property name="name">
@@ -244,76 +314,6 @@
                 </property>
             </widget>
         </vbox>
-    </widget>
-    <spacer>
-        <property name="name">
-            <cstring>Spacer2</cstring>
-        </property>
-        <property name="orientation">
-            <enum>Vertical</enum>
-        </property>
-        <property name="sizeType">
-            <enum>Expanding</enum>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>212</x>
-                <y>171</y>
-                <width>20</width>
-                <height>25</height>
-            </rect>
-        </property>
-    </spacer>
-    <widget class="QLayoutWidget">
-        <property name="name">
-            <cstring>buttonLayout</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>11</x>
-                <y>202</y>
-                <width>423</width>
-                <height>31</height>
-            </rect>
-        </property>
-        <hbox>
-            <property name="name">
-                <cstring>unnamed</cstring>
-            </property>
-            <property name="margin">
-                <number>0</number>
-            </property>
-            <property name="spacing">
-                <number>6</number>
-            </property>
-            <spacer>
-                <property name="name">
-                    <cstring>buttonSpacer</cstring>
-                </property>
-                <property name="orientation">
-                    <enum>Horizontal</enum>
-                </property>
-                <property name="sizeType">
-                    <enum>Expanding</enum>
-                </property>
-            </spacer>
-            <widget class="QPushButton">
-                <property name="name">
-                    <cstring>createButton</cstring>
-                </property>
-                <property name="text">
-                    <string>&amp;Create</string>
-                </property>
-            </widget>
-            <widget class="QPushButton">
-                <property name="name">
-                    <cstring>cancelButton</cstring>
-                </property>
-                <property name="text">
-                    <string>C&amp;ancel</string>
-                </property>
-            </widget>
-        </hbox>
     </widget>
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
