--- a/parts/autoproject/configureoptionswidgetbase.ui
+++ b/parts/autoproject/configureoptionswidgetbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Configure options</string>
+        <string>Configure Options</string>
     </property>
     <vbox>
         <property name="name">
@@ -270,7 +270,7 @@
                             <cstring>ccompiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>C Compiler:</string>
+                            <string>C compiler:</string>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
@@ -395,7 +395,7 @@
                             <cstring>cxxcompiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>C++ Compiler</string>
+                            <string>C++ compiler:</string>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
@@ -520,7 +520,7 @@
                             <cstring>f77compiler_label</cstring>
                         </property>
                         <property name="text">
-                            <string>Fortran Compiler:</string>
+                            <string>Fortran compiler:</string>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="0" column="1">
