--- a/parts/autoproject/subprojectoptionsdlgbase.ui
+++ b/parts/autoproject/subprojectoptionsdlgbase.ui
@@ -753,7 +753,7 @@
                         <cstring>cancelbutton</cstring>
                     </property>
                     <property name="text">
-                        <string>Cancel</string>
+                        <string>&amp;Cancel</string>
                     </property>
                 </widget>
             </hbox>
